# Cairn

./: .gitignore  README.md  dispatch.example.yaml  docker-compose.yaml  pyproject.toml
cairn/: pyproject.toml
cairn/tests/: conftest.py  test_cairn_home.py  test_chat_debug.py  test_chat_models.py  test_chat_router.py  test_chat_service.py  test_client_report_execution.py  test_config_and_adapters.py  test_contracts_and_drivers.py  test_create_project_root.py  test_db_executions.py  test_db_project_root.py  test_engine_models.py  test_engine_overrides.py  test_engine_resolve.py  test_engines_router.py  test_execlog.py  test_execstore.py  test_execution_models.py  test_execution_recorder.py  test_execution_service.py  test_executions_router.py  test_format_project_knowledge.py  test_format_skills.py  test_install_skills.py  test_local_process.py  test_local_runtime.py  test_mock_end_to_end.py  test_models_project_root.py  test_prepare_project_knowledge.py  test_prepare_skills.py  test_probe_tool.py  (+11 more)
container/: Dockerfile
docs/: flockos.md
flock/: .envtemplate  .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
flockos/: pyproject.toml
flockos/src/flockos/: __init__.py  app.py  cli.py  engine.py  flock_app.py
flockos/static/flock/: index.html
flockos/static/flock/assets/: index-B0teig7A.css  index-BChLyrHM.css  index-BGSksNpc.css  index-Bzvdn5Ou.js  index-CYsFVpCi.js  index-Dftu8JZl.css  index-DkZv7t9O.js  index-Dtqk8Aex.js  index-Lyhoumru.css  index-omnaRptd.js
flockos/tests/: test_app.py  test_cli.py  test_engine.py
(+254 files in other folders)
